--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "papo",
+  "name": "papudinho",
   "version": "1.0.0",
-  "description": "papo: An Ionic project",
+  "description": "papudinho: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
-    "gulp-sass": "^0.7.1",
+    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0"
@@ -13,5 +13,20 @@
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
-  }
+  },
+  "cordovaPlugins": [
+    "cordova-plugin-device",
+    "cordova-plugin-geolocation",
+    "cordova-plugin-console",
+    "cordova-plugin-camera",
+    "cordova-plugin-whitelist",
+    "cordova-plugin-splashscreen",
+    "cordova-plugin-statusbar",
+    "ionic-plugin-keyboard",
+    "com.pushwoosh.plugins.pushwoosh",
+    "cordova-plugin-inappbrowser"
+  ],
+  "cordovaPlatforms": [
+    "ios"
+  ]
 }
